toggle-switchy.css
/*
Toggle Switchy v1.6
by Adam Culpepper | @adamculpepper
https://github.com/adamculpepper/toggle-switchy
*/

/* Customizable styles */

/*Colors: Default (blue) */
.toggle-switchy input + label {color:#fff;}
.toggle-switchy input + label .toggle {background:#fff;}
.toggle-switchy input + label:before {content:'ON';}
.toggle-switchy input + label:after {content:'OFF';}
.toggle-switchy input:checked + label {background:#3498db;}
.toggle-switchy input:not(:checked) + label {background:#ccc;}
.toggle-switchy input:checked + label .toggle {border:3px solid #3498db;}
.toggle-switchy input:not(:checked) + label .toggle {border:3px solid #ccc;}

/* Rounded switch corners */
.toggle-switchy input + label .toggle {border-radius:6px;}

/* //////////////////////////
CORE STYLES BELOW - NO TOUCHY
////////////////////////// */
.toggle-switchy {display:inline-block; overflow:hidden; border-radius:3px; position:relative;}
.toggle-switchy input {display:none;}
.toggle-switchy input[disabled] + label {opacity:0.5;}
.toggle-switchy input + label {display:block; width:100%; height:100%; margin:0; cursor:pointer;}
.toggle-switchy input + label .toggle {content:''; display:block; height:100%; position:absolute; right:0; z-index:3;}

/* LABELS */
.toggle-switchy input + label:before,
.toggle-switchy input + label:after {display:flex; align-items:center; position:absolute; z-index:2; height:100%;}
.toggle-switchy input + label:before {right:55%;}
.toggle-switchy input + label:after {left:50%;}
.toggle-switchy input + label:hover {cursor:pointer;}

/* SHOW/HIDE */
.toggle-switchy input + label:before {opacity:0;}
.toggle-switchy input:checked + label:before {opacity:1;}
.toggle-switchy input:checked + label:after {opacity:0;}

/* Transitions */
.toggle-switchy input + label {transition:background 200ms linear;}
.toggle-switchy input + label .toggle {transition:right 200ms linear, border-color 200ms linear;}
.toggle-switchy input + label:before,
.toggle-switchy input + label:after {transition:all 200ms linear;}
/* //////////////////////////
CORE STYLES ABOVE - NO TOUCHY
////////////////////////// */

/* Size: Extra Large */
.toggle-switchy[data-size='xl']										{width:85px; height:40px;}
.toggle-switchy[data-size='xl'] .toggle								{width:40px;}
.toggle-switchy[data-size='xl'] input + label:before,
.toggle-switchy[data-size='xl'] input + label:after					{font-size:1.2rem;}
.toggle-switchy[data-size='xl'] input:not(:checked) + label .toggle	{right:calc(100% - 40px);}

/* Size: Large */
.toggle-switchy[data-size='lg']										{width:75px; height:35px;}
.toggle-switchy[data-size='lg'] .toggle								{width:35px;}
.toggle-switchy[data-size='lg'] input + label:before,
.toggle-switchy[data-size='lg'] input + label:after					{font-size:1rem;}
.toggle-switchy[data-size='lg'] input:not(:checked) + label .toggle	{right:calc(100% - 35px);}

/* Size: Default (medium) */
.toggle-switchy														{width:65px; height:30px;}
.toggle-switchy .toggle												{width:30px;}
.toggle-switchy input + label:before,
.toggle-switchy input + label:after									{font-size:0.8rem;}
.toggle-switchy input:not(:checked) + label .toggle					{right:calc(100% - 30px);}

/* Size: Small */
.toggle-switchy[data-size='sm']										{width:55px; height:25px;}
.toggle-switchy[data-size='sm'] .toggle								{width:25px;}
.toggle-switchy[data-size='sm'] input + label:before,
.toggle-switchy[data-size='sm'] input + label:after					{font-size:0.7rem;}
.toggle-switchy[data-size='sm'] input:not(:checked) + label .toggle	{right:calc(100% - 25px);}

/* Size: Extra Small */
.toggle-switchy[data-size='xs']										{width:45px; height:20px;}
.toggle-switchy[data-size='xs'] .toggle								{width:20px;}
.toggle-switchy[data-size='xs'] input + label:before,
.toggle-switchy[data-size='xs'] input + label:after					{font-size:0.5rem;}
.toggle-switchy[data-size='xs'] input:not(:checked) + label .toggle	{right:calc(100% - 20px);}

/* Style: Rounded */
.toggle-switchy[data-style='rounded'],
.toggle-switchy[data-style='rounded'] input + label .toggle			{border-radius:50px;}

.toggle-switchy[data-style='rounded'] input + label:before {right:50%;}
.toggle-switchy[data-style='rounded'] input + label:after {left:50%;}

/* Text: Off */
.toggle-switchy[data-text='false'] input + label:before,
.toggle-switchy[data-text='false'] input + label:after				{content:'';}

.toggle-switchy[data-text='false'][data-size='xl']					{width:80px;}
.toggle-switchy[data-text='false'][data-size='lg']					{width:70px;}
.toggle-switchy[data-text='false']									{width:60px;}
.toggle-switchy[data-text='false'][data-size='sm']					{width:50px;}
.toggle-switchy[data-text='false'][data-size='xs']					{width:40px;}

/* Color: Red */
.toggle-switchy[data-color='red'] input:checked + label {background:#e74c3c;}
.toggle-switchy[data-color='red'][data-style='rounded'] input:checked + label .toggle {border-color:#e74c3c;}

/* Color: Orange */
.toggle-switchy[data-color='orange'] input:checked + label {background:#e67e22;}
.toggle-switchy[data-color='orange'][data-style='rounded'] input:checked + label .toggle {border-color:#e67e22;}
 
 /* Color: Yellow */
.toggle-switchy[data-color='yellow'] input:checked + label {background:#f1c40f;}
.toggle-switchy[data-color='yellow'][data-style='rounded'] input:checked + label .toggle {border-color:#f1c40f;}

/* Color: Green */
.toggle-switchy[data-color='green'] input:checked + label {background:#2ecc71;}
.toggle-switchy[data-color='green'][data-style='rounded'] input:checked + label .toggle {border-color:#2ecc71;}

/* Color: Blue */
.toggle-switchy[data-color='blue'] input:checked + label {background:#3498db;}
.toggle-switchy[data-color='blue'][data-style='rounded'] input:checked + label .toggle {border-color:#3498db;}

/* Color: Purple */
.toggle-switchy[data-color='purple'] input:checked + label {background:#9b59b6;}
.toggle-switchy[data-color='purple'][data-style='rounded'] input:checked + label .toggle {border-color:#9b59b6;}

/* Color: Gray */
.toggle-switchy[data-color='gray'] input:checked + label {background:#555;}
.toggle-switchy[data-color='gray'][data-style='rounded'] input:checked + label .toggle {border-color:#555;}

